[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-kernelbox"
version = "0.1.1"
description = "A LangChain adapter for KernelBox, enabling stateful IPython execution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "kernelbox",
    "pydantic>=2.0"
]

[project.urls]
Homepage = "https://github.com/VinayChaudhari1996/langchain-kernelbox"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
